# mhctyper

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  tox.ini  zensical.toml
.github/workflows/: docs.yml  release.yml  tox.yml
docs/: index.md
search/: search_index.json
src/mhctyper/: __init__.py  __main__.py  cli.py  logger.py  mhctyper.py  score_alleles.py  utils.py
src/pyhlatyper/: __init__.py  __main__.py  bam.py  cli.py  hla_allele.py  logger.py  pyhlatyper.py  score_alleles.py
tests/: test_hla_allele.py
