[project]
name = "mhctyper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "simo", email = "svm.zhang@gmail.com" }
]
dependencies = [
    "numpy>=2.1.1",
    "polars>=1.7.0",
    "pysam>=0.22.1",
    "tqdm>=4.66.5",
    "tinyscibio==0.4.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mhctyper"]


[project.scripts]
mhctyper = "mhctyper:run_mhctyper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "types-tqdm>=4.67.0.20241221",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "mypy>=1.15.0",
    "tox>=4.24.1",
    "numpy-typing>=1.1.1",
]

[tool.coverage]
paths.source = [
  "src",
]
run.branch = true
run.omit = [
  "*/_version.py",
]
run.source = [
  "mhctyper"
]
run.parallel = true
report.fail_under = 10
report.show_missing = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=auto --cov"

[tool.mypy]
strict = true
pretty = true
overrides = [
  { module = [
      "tqdm"
    ], ignore_missing_imports = true},
]

