[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling==1.26.3", "hatch-vcs"
]

[project]
name = "mhctyper"
description = "MHC Class I and II typer based on polysolver algorithm."
readme = {file = "README.md", content-type = "text/markdown"}
keywords = [
  "bioinformatics",
  "genomics",
  "sequencing",
  "HLA typing"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Libraries"
]
urls.Source = "https://github.com/svm-zhang/mhctyper"
urls.Documentation = "https://svm-zhang.github.io/mhctyper/"
urls.Issues = "https://github.com/svm-zhang/mhctyper/issues"
license = "MIT"
authors = [
    { name = "Simo Zhang", email = "svm.zhang@gmail.com" }
]
maintainers = [
    { name = "Simo Zhang", email = "svm.zhang@gmail.com" }
]
dynamic = ["version"]
dependencies = [
    "numpy>=2.1.1",
    "polars>=1.7.0",
    "pysam>=0.22.1",
    "tqdm>=4.66.5",
    "tinyscibio>=0.4.1",
]
requires-python = ">= 3.10"

[project.scripts]
mhctyper = "mhctyper:run_mhctyper"

[tool.hatch]
metadata.allow-direct-references = true
build.targets.sdist.include = [
  "/src",
  "/tests",
  "/tox.ini"
]
build.targets.wheel.packages = ["src/mhctyper"]
build.hooks.vcs.version-file = "src/mhctyper/_version.py"
version.source = "vcs"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "mypy>=1.15.0",
    "tox>=4.24.1",
]

[tool.coverage]
paths.source = [
  "src",
]
run.branch = true
run.omit = [
  "*/_version.py",
]
run.source = [
  "mhctyper"
]
run.parallel = true
report.fail_under = 10
report.show_missing = true


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=auto --cov"

[tool.mypy]
strict = true
pretty = true
overrides = [
  { module = [
      "tqdm"
    ], ignore_missing_imports = true},
]

